--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav>
-        <div>logo</div>
-        <span>Model S</span>
-        <span>Model 3</span>
-        <span>Model X</span>
-        <span>Model Y</span>
-        <span>Solar Roof</span>
-        <span>Solar Panels</span>
+    <nav id="nav-styles">
 
-        <span>Shop</span>
-        <span>Account</span>
-        <span>Menu</span>
+        <div>logo</div>
+
+        <span class="nav-item">Model S</span>
+        <span class="nav-item">Model 3</span>
+        <span class="nav-item">Model X</span>
+        <span class="nav-item">Model Y</span>
+        <span class="nav-item">Solar Roof</span>
+        <span class="nav-item">Solar Panels</span>
+
+        <span class="nav-item">Shop</span>
+        <span class="nav-item">Account</span>
+        <span class="nav-item">Menu</span>
     </nav>
     <main>
         <div>
